--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 FTInternational.xcworkspace
 Podfile.lock
 Pods
+FTInternational.xcodeproj/xcuserdata/wenxiaopei.xcuserdatad/xcschemes/FTInternational.xcscheme
